// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Hero Banner Simple - grey renders correctly 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--grey ecl-hero-banner--centered"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-hero-banner__container"
      >
        <div
          class="ecl-hero-banner__content"
        >
          <div
            class="ecl-hero-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-hero-banner__description"
          >
            Innovation, economy, environment and geopolitics
          </p>
          <a
            class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Subscribe
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--corner-arrow"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner Simple - primary renders correctly 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--primary ecl-hero-banner--centered"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-hero-banner__container"
      >
        <div
          class="ecl-hero-banner__content"
        >
          <div
            class="ecl-hero-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-hero-banner__description"
          >
            Innovation, economy, environment and geopolitics
          </p>
          <a
            class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Subscribe
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--corner-arrow"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner Simple - white renders correctly 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--white ecl-hero-banner--centered"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-hero-banner__container"
      >
        <div
          class="ecl-hero-banner__content"
        >
          <div
            class="ecl-hero-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-hero-banner__description"
          >
            Innovation, economy, environment and geopolitics
          </p>
          <a
            class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Subscribe
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--corner-arrow"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner Simple renders correctly with extra attributes 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--primary ecl-hero-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-hero-banner__container"
      >
        <div
          class="ecl-hero-banner__content"
        >
          <div
            class="ecl-hero-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-hero-banner__description"
          >
            Innovation, economy, environment and geopolitics
          </p>
          <a
            class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Subscribe
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--corner-arrow"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner Simple renders correctly with extra class names 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--primary ecl-hero-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-hero-banner__container"
      >
        <div
          class="ecl-hero-banner__content"
        >
          <div
            class="ecl-hero-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-hero-banner__description"
          >
            Innovation, economy, environment and geopolitics
          </p>
          <a
            class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Subscribe
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--corner-arrow"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner Simple with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--primary ecl-hero-banner--centered"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-hero-banner__container"
      >
        <div
          class="ecl-hero-banner__content"
        >
          <div
            class="ecl-hero-banner__title"
          />
          <p
            class="ecl-hero-banner__description"
          >
            Innovation, economy, environment and geopolitics
          </p>
          <a
            class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Subscribe
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--corner-arrow"
              />
            </svg>
            <span
              class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
              title="[icon] - ecl compliant"
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#notifications--success"
                />
              </svg>
            </span>
          </a>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[link--cta] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </section>
  <!-- ecl2-compliance: hero-banner--primary -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [hero-banner--primary] -  The {{ title }} property needs to be set and filled in.
    </p>
  </div>
</test>
`;

exports[`EC - Hero Banner image - gradient renders correctly 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--image-gradient ecl-hero-banner--centered"
  >
    <div
      class="ecl-hero-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container"
    >
      <div
        class="ecl-hero-banner__container"
      >
        <div
          class="ecl-hero-banner__content"
        >
          <div
            class="ecl-hero-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-hero-banner__description"
          >
            Innovation, economy, environment and geopolitics
          </p>
          <a
            class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Subscribe
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--corner-arrow"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner image - shade renders correctly 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--image-shade ecl-hero-banner--centered"
  >
    <div
      class="ecl-hero-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container"
    >
      <div
        class="ecl-hero-banner__container"
      >
        <div
          class="ecl-hero-banner__content"
        >
          <div
            class="ecl-hero-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-hero-banner__description"
          >
            Innovation, economy, environment and geopolitics
          </p>
          <a
            class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Subscribe
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--corner-arrow"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner image - text-box renders correctly 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--image ecl-hero-banner--centered"
  >
    <div
      class="ecl-hero-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container"
    >
      <div
        class="ecl-hero-banner__container"
      >
        <div
          class="ecl-hero-banner__content"
        >
          <div
            class="ecl-hero-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-hero-banner__description"
          >
            Innovation, economy, environment and geopolitics
          </p>
          <a
            class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Subscribe
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--corner-arrow"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner image renders correctly with extra attributes 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--image ecl-hero-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-hero-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container"
    >
      <div
        class="ecl-hero-banner__container"
      >
        <div
          class="ecl-hero-banner__content"
        >
          <div
            class="ecl-hero-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-hero-banner__description"
          >
            Innovation, economy, environment and geopolitics
          </p>
          <a
            class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Subscribe
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--corner-arrow"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner image renders correctly with extra class names 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--image ecl-hero-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-hero-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-container"
    >
      <div
        class="ecl-hero-banner__container"
      >
        <div
          class="ecl-hero-banner__content"
        >
          <div
            class="ecl-hero-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-hero-banner__description"
          >
            Innovation, economy, environment and geopolitics
          </p>
          <a
            class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Subscribe
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--corner-arrow"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </section>
</test>
`;

exports[`EC - Hero Banner image with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <section
    class="ecl-hero-banner ecl-hero-banner--image ecl-hero-banner--centered"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-hero-banner__container"
      >
        <div
          class="ecl-hero-banner__content"
        >
          <div
            class="ecl-hero-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-hero-banner__description"
          >
            Innovation, economy, environment and geopolitics
          </p>
          <a
            class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-hero-banner__link-cta"
            href="/example"
          >
            <span
              class="ecl-link__label"
            >
              Subscribe
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--corner-arrow"
              />
            </svg>
            <span
              class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
              title="[icon] - ecl compliant"
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#notifications--success"
                />
              </svg>
            </span>
          </a>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[link--cta] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </section>
  <!-- ecl2-compliance: hero-banner--image -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [hero-banner--image] -  When type is image, the {{ image }} property needs to be set and filled in.
    </p>
  </div>
</test>
`;
